<resources>
  <string name="id_1030_minutes">~ 10-30 Minutes</string>
  <string name="id_12_confirmations">1/2 confirmations</string>
  <string name="id_12_months_51840_blocks">12 months (51840 blocks)</string>
  <string name="id_15_months_65535_blocks">15 months (65535 blocks)</string>
  <string name="id_1_double_check_all_of_your">1. Double check all of your recovery phrase word by word, are all words correct?\n2. The order of words is important! Make sure you\'ve typed the words in the correct order.\n\nIf neither of these tips have helped you, or if you don\'t have a 12, 24 or 27 words recovery phrase please check our help center.</string>
  <string name="id_1d_2s_ago">%1$d %2$s ago</string>
  <string name="id_1d_minutes">%1$d minutes</string>
  <string name="id_1s_blocks_left_2d">%1$s blocks left %2$d</string>
  <string name="id_1s_twofactor_setup">%1$s Two-Factor setup</string>
  <string name="id_2_hours">~ 2 Hours</string>
  <string name="id_2fa_dispute_in_progress">2FA Dispute in Progress</string>
  <string name="id_2fa_expired">2FA Expired</string>
  <string name="id_2fa_expiry">2FA Expiry</string>
  <string name="id_2fa_methods">2FA Methods</string>
  <string name="id_2fa_reset_in_progress">2FA Reset in Progress</string>
  <string name="id_2fa_threshold">2FA Threshold</string>
  <string name="id_2of3_account">2of3 Account</string>
  <string name="id_4_hours">~ 4 Hours</string>
  <string name="id_5_seconds_minimum">5 seconds minimum</string>
  <string name="id_6_months_25920_blocks">6 months (25920 blocks)</string>
  <string name="id_a_2of3_account_requires_two_out">A 2of3 account requires two out of three signatures to spend coins. The third signature is from a backup key known only to you. This gives you the security benefits of a standard account, while still allowing you to move your coins independently at any point in time.</string>
  <string name="id_a_new_transaction_has_just">A new transaction has just arrived in your wallet.</string>
  <string name="id_a_screen_lock_must_be_enabled">A screen lock must be enabled from Android settings</string>
  <string name="id_a_wallet_is_detected_on_this">A wallet is detected on this device:</string>
  <string name="id_about">About</string>
  <string name="id_accept">ACCEPT</string>
  <string name="id_access">Access</string>
  <string name="id_account">ACCOUNT</string>
  <string name="id_account_id">Account ID</string>
  <string name="id_account_name">Account Name</string>
  <string name="id_account_type">Account Type</string>
  <string name="id_accounts_summary">Accounts summary</string>
  <string name="id_action_canceled">Action canceled</string>
  <string name="id_add_a_note_only_you_can_see_it">Add a note (only you can see it).</string>
  <string name="id_add_a_pgp_public_key_to_receive">Add a PGP public key to receive encrypted email and keep your privacy</string>
  <string name="id_add_amount">Add Amount</string>
  <string name="id_add_amount_optional">Add amount (optional)</string>
  <string name="id_add_an_amp_wallet">Add an AMP wallet</string>
  <string name="id_add_another_wallet">Add another wallet</string>
  <string name="id_add_custom_network_by_qr_code">Add custom network by QR Code</string>
  <string name="id_add_custom_network_by_url">Add custom network by URL</string>
  <string name="id_add_new_account">Add New Account</string>
  <string name="id_add_wallet">Add Wallet</string>
  <string name="id_additional_networks">Additional Networks</string>
  <string name="id_additional_security">Additional Security</string>
  <string name="id_address">Address</string>
  <string name="id_address_1s">Address: %1$s</string>
  <string name="id_address_copied_to_clipboard">Address copied to clipboard</string>
  <string name="id_address_verified">Address verified!</string>
  <string name="id_address_was_filled_by_a_payment">Address was filled by a Payment URI</string>
  <string name="id_addresses">Addresses</string>
  <string name="id_advanced">Advanced</string>
  <string name="id_advanced_network_settings">Advanced network settings</string>
  <string name="id_advanced_options_for_your_third">Advanced options for your third recovery key</string>
  <string name="id_all">All</string>
  <string name="id_all_assets">All Assets</string>
  <string name="id_all_of_the_accounts_in_your">All of the accounts in your wallet need to be empty before deleting it.</string>
  <string name="id_all_the_coins_received_or">All the coins received or created as change.</string>
  <string name="id_all_wallets">All wallets</string>
  <string name="id_allows_you_to_quickly_check">Allows you to quickly check your balance, receive funds or sweep a paper wallet. You can\'t send funds in watch-only mode.</string>
  <string name="id_always">Always</string>
  <string name="id_amount">Amount</string>
  <string name="id_amount_in_s">Amount in %s</string>
  <string name="id_amp_account">AMP Account</string>
  <string name="id_amp_accounts_are_only_available">AMP accounts are only available on Liquid wallets. You may be required to provide your account ID to issuers to receive an AMP Asset.</string>
  <string name="id_amp_id">AMP ID</string>
  <string name="id_another_2fa_method_is_already">Another 2FA method is already active. Confirm via 2FA that you authorize this change.</string>
  <string name="id_app_settings">App Settings</string>
  <string name="id_are_you_sure_you_want_to_view">Are you sure you want to view the transaction using %s?</string>
  <string name="id_as_easy_as_snapping_a_photo">As easy as snapping a photo with your phone. If you have an existing wallet, scan your recovery phrase from settings.</string>
  <string name="id_asset">Asset</string>
  <string name="id_asset_details">Asset Details</string>
  <string name="id_asset_icons_are_missing_try">Asset icons are missing, try reloading them.</string>
  <string name="id_asset_id">Asset ID</string>
  <string name="id_asset_name">Asset Name</string>
  <string name="id_assets">Assets</string>
  <string name="id_attempts_remaining_d">Attempts remaining: %d</string>
  <string name="id_authenticate_to_view_the">Authenticate to view the recovery phrase</string>
  <string name="id_authentication_error_s">Authentication error: %s</string>
  <string name="id_authentication_failed">Authentication failed</string>
  <string name="id_authenticator_app">Authenticator app</string>
  <string name="id_authenticator_qr_code">Authenticator QR Code</string>
  <string name="id_authenticator_secret_key">Authenticator secret key</string>
  <string name="id_auto_logout_timeout">Auto logout timeout</string>
  <string name="id_auto_logout_timeout_expired">Auto logout timeout expired</string>
  <string name="id_autolock_after">Autolock After</string>
  <string name="id_back">Back</string>
  <string name="id_back_up_recovery_phrase">Back Up Recovery Phrase</string>
  <string name="id_backup_the_recovery_mnemonic">Backup the recovery mnemonic and recovery xpub to recover funds from your 2of3 account.</string>
  <string name="id_backup_your_mnemonic_before">Backup your mnemonic before removing the wallet from this device.</string>
  <string name="id_be_aware_other_apps_can_read_or">Be aware, other apps can read or change the clipboard</string>
  <string name="id_be_sure_your_recovery_phrase_is">Be sure your recovery phrase is backed up before removing this wallet.</string>
  <string name="id_biometric_login_is_disabled">Biometric Login is Disabled</string>
  <string name="id_biometric_login_is_enabled">Biometric Login is Enabled</string>
  <string name="id_biometrics_authentication">Biometrics Authentication</string>
  <string name="id_bip49_accounts_allow_you_to">BIP49 accounts allow you to segregate funds, and to receive on wrapped segwit addresses, thus ensuring the highest backwards compatibility when receiving funds from anyone on the network.</string>
  <string name="id_bip84_accounts_allow_you_to">BIP84 accounts allow you to segregate your funds, and to receive on bech32 native segwit addresses. This account type ensures cheaper transactions when sending funds, but not all services support bech32 addresses yet.</string>
  <string name="id_bitcoin_denomination">Bitcoin denomination</string>
  <string name="id_bitcoin_electrum_server">Bitcoin Electrum server</string>
  <string name="id_bitcoin_is_the_worlds_leading">Bitcoin is the world\'s leading P2P cryptocurrency network. Select to send and receive bitcoin.</string>
  <string name="id_bitcoin_wallet">Bitcoin wallet.</string>
  <string name="id_bitcoin_wallets">Bitcoin wallets</string>
  <string name="id_block">block</string>
  <string name="id_block_d">Block %d</string>
  <string name="id_block_height_1d">Block height: %1$d</string>
  <string name="id_blocks">blocks</string>
  <string name="id_blocks_confirmed">blocks confirmed</string>
  <string name="id_blockstream_does_not_have">Blockstream does not have access to your wallet backup and will not be able to help you in case you lose it</string>
  <string name="id_cancel">Cancel</string>
  <string name="id_cancel_twofactor_reset">Cancel Two-Factor reset</string>
  <string name="id_change">Change</string>
  <string name="id_choose_your_network">Choose Your Network</string>
  <string name="id_confirm_passphrase">Confirm passphrase</string>
  <string name="id_congratulations">Congratulations!</string>
  <string name="id_connect_through_a_proxy">Connect through a proxy</string>
  <string name="id_connect_with_tor">Connect with Tor</string>
  <string name="id_continue">Continue</string>
  <string name="id_dispute_twofactor_reset">Dispute Two-Factor reset</string>
  <string name="id_enable_spv">Enable SPV</string>
  <string name="id_example_89014283334011612858333">Example: 8.90.14.2:8333,40.116.12.85:8333</string>
  <string name="id_fee">Fee</string>
  <string name="id_go_to_wallet">Go to Wallet</string>
  <string name="id_green_mnemonic_qr_code">Green Mnemonic QR Code</string>
  <string name="id_log_in">Log In</string>
  <string name="id_log_out">Log out</string>
  <string name="id_mnemonic">Mnemonic</string>
  <string name="id_mnemonic_not_available">Mnemonic not available</string>
  <string name="id_my_notes">MY NOTES</string>
  <string name="id_network">Network</string>
  <string name="id_only_connect_to_trusted_nodes">Only connect to trusted node(s) for SPV</string>
  <string name="id_password">Password</string>
  <string name="id_please_enter_the_passphrase_for">Please enter the passphrase for your hardware wallet.</string>
  <string name="id_privacy_policy">Privacy Policy</string>
  <string name="id_proxy_settings">PROXY SETTINGS</string>
  <string name="id_remember_me">Remember me</string>
  <string name="id_reset_spv">Reset SPV</string>
  <string name="id_security">Security</string>
  <string name="id_sending">SENDING</string>
  <string name="id_socks5_hostname">Socks5 Hostname</string>
  <string name="id_socks5_port">Socks5 Port</string>
  <string name="id_spv_is_always_synchronized_on">SPV is always synchronized on non-mobile networks like WiFi or Ethernet. This setting also synchronizes when using mobile data. This can be expensive depending on your data plan so take care when enabling.</string>
  <string name="id_synchronize_spv_on_mobile">Synchronize SPV on mobile</string>
  <string name="id_tap_to_restart_the_simplified">Tap to restart the Simplified Payment Verification</string>
  <string name="id_terms_of_use">Terms of Use</string>
  <string name="id_to">TO</string>
  <string name="id_twofactor">Two-Factor</string>
  <string name="id_username">Username</string>
  <string name="id_version">Version</string>
  <string name="id_version_1s_2s">Version %1$s %2$s</string>
  <string name="id_waiting_for_transaction">Waiting for transaction…</string>
  <string name="id_your_green_wallet_is_now_ready">Your Green wallet is now ready to use.</string>
</resources>