<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="network_category"
        android:title="@string/id_network"
        android:icon="@drawable/ic_network"
        android:layout="@layout/preference_category_green"
        />

    <Preference
        android:key="logout"
        android:title=""
        android:summary=""/>

    <PreferenceCategory
        android:title="@string/id_twofactor"
        android:icon="@drawable/ic_twofactor"
        android:layout="@layout/preference_category_green"/>

    <Preference
        android:key="cancel_twofactor_reset"
        android:title="@string/id_cancel_twofactor_reset" />

    <Preference
        android:key="dispute_twofactor_reset"
        android:title="@string/id_dispute_twofactor_reset" />

    <PreferenceCategory
        android:title="@string/id_security"
        android:icon="@drawable/ic_security"
        android:layout="@layout/preference_category_green"/>

    <Preference
        android:key="mnemonic_passphrase"
        android:title="@string/id_mnemonic"
        android:summary="@string/id_mnemonic_not_available" />

    <PreferenceCategory android:title="@string/id_about"
        android:icon="@drawable/ic_about"
        android:layout="@layout/preference_category_green"/>

    <Preference
        android:key="version"
        android:summary="@string/id_version_1s_2s"
        android:title="@string/id_version" />

    <Preference
        android:key="terms_of_use"
        android:title="@string/id_terms_of_use" />

    <Preference
        android:key="privacy_policy"
        android:title="@string/id_privacy_policy" />

    <Preference
        android:layout="@layout/view_space_big" />

</PreferenceScreen>
