<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="network_category"
        android:title="@string/id_network"
        android:icon="@drawable/ic_network"
        android:layout="@layout/preference_category_green"
        />

    <Preference
        android:key="logout"
        android:layout="@layout/view_logout"
        android:title=""
        android:summary="@string/id_log_out"/>

    <PreferenceCategory
        android:title="@string/id_about"
        android:icon="@drawable/ic_about"
        android:layout="@layout/preference_category_green"/>

    <Preference
        android:key="version"
        android:summary="@string/id_version_1s_2s"
        android:title="@string/id_version" />

    <Preference
        android:key="terms_of_use"
        android:title="@string/id_terms_of_use" />

    <Preference
        android:key="privacy_policy"
        android:title="@string/id_privacy_policy" />


    <PreferenceCategory />
</PreferenceScreen>
