<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_please_enter_the_passphrase_for"
        android:textColor="@color/whiteSecondary"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/trezorPassphraseValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="flagNoPersonalizedLearning"
            android:importantForAccessibility="no" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_confirm_passphrase"
        android:textColor="@color/whiteSecondary"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/trezorPassphraseValueConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="flagNoPersonalizedLearning"
            android:importantForAccessibility="no" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/trezorPassphraseOk"
        style="@style/gradientButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_continue"
        android:layout_margin="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/trezorPassphraseCancel"
        style="@style/borderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_cancel"
        android:layout_margin="@dimen/activity_vertical_margin"/>

</LinearLayout>
