<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SectionTitle"
                android:text="@string/id_sending"/>

            <TextView
                android:id="@+id/amountWordSending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_amount" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/assetsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sendAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_fee" />

            <TextView
                android:id="@+id/sendFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textIsSelectable="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/sections_spacing" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SectionTitle"
                android:text="@string/id_to"/>

            <TextView
                android:id="@+id/addressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="12sp"/>

            <LinearLayout
                android:id="@+id/changeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id_change"/>

                <TextView
                    android:id="@+id/changeAddressText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/sendMemoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SectionTitle"
                android:text="@string/id_my_notes" />

            <EditText
                android:id="@+id/noteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="1024"
                android:inputType="textMultiLine|textNoSuggestions|textVisiblePassword"
                android:textColor="@color/textColor"
                android:background="@drawable/textbox"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="30dp" />

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryDark"
        android:padding="16dp">

    </FrameLayout>
</LinearLayout>