<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/buttonJungleGreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.greenaddress.greenbits.ui.NetworkSettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:background="@color/buttonJungleGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:padding="@dimen/sections_padding"
                    android:text="@string/id_choose_your_network"/>

                <ImageView
                    android:id="@+id/close_network_settings"
                    android:padding="@dimen/sections_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:src="@drawable/ic_cancel" />
            </LinearLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:padding="@dimen/sections_padding"
            android:id="@+id/networksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/switchEnableProxySettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:padding="@dimen/sections_padding"
            android:text="@string/id_connect_through_a_proxy"/>

        <LinearLayout
            android:id="@+id/proxySection"
            android:padding="@dimen/sections_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_proxy_settings"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/socks5Host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_socks5_hostname"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:imeOptions="flagNoPersonalizedLearning"
                android:importantForAccessibility="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/socks5Port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_socks5_port"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:inputType="number"
                android:imeOptions="flagNoPersonalizedLearning"
                android:importantForAccessibility="no" />

        </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Switch
            android:id="@+id/switchEnableTor"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/sections_padding"
            android:text="@string/id_connect_with_tor"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sections_padding"/>

        <Button
            android:id="@+id/selectNetworkButton"
            style="@style/gradientButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/sections_padding" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
