<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_vertical_margin"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="64dp"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/id_congratulations"
        android:textColor="@color/white"
        android:textSize="32sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/id_your_green_wallet_is_now_ready"
        android:textColor="@color/white"
        android:textSize="32sp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/material_button_border"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/id_go_to_wallet"
        android:textAllCaps="false"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"/>

    <Button
        android:id="@+id/securityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/material_button"
        android:text="@string/id_improve_security"
        android:textAllCaps="false"/>

</LinearLayout>
